modify header and add big images zone

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -56,6 +56,11 @@ body {
   color: #666;
 }
 
+.carousel{
+  background-color: red;
+  height: 400px;
+}
+
 a {
   color: #2879d0;
 }
@@ -64,17 +69,16 @@ a:hover {
 }
 
 header {
-  padding-top: 40px;
-  padding-bottom: 40px;
+  background-color: white;
+  padding-top: 25px;
+  padding-bottom: 10px;
   font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif; 
-  background: #2e7bcf url(../images/header-bg.jpg) 0 0 repeat-x;
-  border-bottom: solid 1px #275da1;
 }
 
 header h1 {
   letter-spacing: -1px;
   font-size: 72px;
-  color: #fff;
+  color: silver;
   line-height: 1;
   margin-bottom: 0.2em;
   width: 540px;
@@ -93,11 +97,6 @@ header h2 {
   position: relative;
   width: 940px;
   margin: 0 auto;
-}
-
-#content-wrapper {
-  border-top: solid 1px #fff;
-  padding-top: 30px;
 }
 
 #main-content {
