add border bottom to the header

--- a/stylesheets/stylesheet.less
+++ b/stylesheets/stylesheet.less
@@ -108,6 +108,7 @@ h3{
 
 header {
   background-color: rgb(47, 47, 47);
+  border-bottom: 3px solid #34798D;
   padding-top: 25px;
   padding-bottom: 10px;
   h1{
