fix styles for example boxes

--- a/stylesheets/stylesheet.less
+++ b/stylesheets/stylesheet.less
@@ -407,7 +407,7 @@ dl dd {
     border: 6px solid white;
     outline: 1px solid silver;
     &+ .example-box{
-      margin-left: 40px;
+      margin-left: 20px;
     }
   }
   .img-wrapper{
@@ -431,7 +431,7 @@ dl dd {
 }
 
 footer {
-  background: #474747;
+  background: rgb(47, 47, 47);
   margin-top: 40px;
   padding-top: 30px;
   padding-bottom: 30px;
